--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ section{
 section .section-img{
 	width: 100%;
 	height: 480px;
-	background: url(../image/1.jpeg) no-repeat;
+	background: url(../image/1.jpg) no-repeat;
     background-size: cover;
 }
 section .section-bg-box{
